--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
+# Archivos que queremos que no se suban al repositorio o a la opcion de produccion
 
 # Compiled output
 /dist
